--- a/membership/templates/template.html
+++ b/membership/templates/template.html
@@ -34,6 +34,7 @@
         {% if username %}
             <a href="logout">Logout</a>
             <br/><a href="home">Home</a>
+            <br/><a href="members">Elfins</a>
             <br/><a href="carers">Carers</a>
             <br/><a href="admin">Admin</a>
         {%  else %}
