--- a/membership/templates/home.html
+++ b/membership/templates/home.html
@@ -3,11 +3,18 @@
 
 
 <table class="table table-striped" frame='box' bordercolor='green'>
+  <tr>
+      <th></th><th>M</th><th>F</th><th>Both</th>
+  </tr>
   {% for key, value in summary.items %}
   <tr>
-    <th>{{ key }}</th>
-    <td>{{ value }}</td>
+    <th><a href=members?status={{ key }}>{{ key }}</a></th>
+    <td>{{ value.0 }}</td>
+    <td>{{ value.1 }}</td>
+    <td>{{ value.2 }}</td>
   </tr>
   {% endfor %}
 </table>
+
+
 {% endblock %}
