--- a/membership/templates/members.html
+++ b/membership/templates/members.html
@@ -1,7 +1,7 @@
 {% extends "template.html" %}
 {% block content %}
 
-<h2>members</h2>
+<h2>Members</h2>
 <table class="table table-striped" frame='box' bordercolor='green'>
   <tr>
       <th>Name</th>
