--- a/membership/templates/home.html
+++ b/membership/templates/home.html
@@ -4,7 +4,7 @@
 
 <table class="table table-striped" frame='box' bordercolor='green'>
   <tr>
-      <th></th><th>M</th><th>F</th><th>Both</th>
+      <th>Status</th><th>M</th><th>F</th><th>Both</th>
   </tr>
   {% for key, value in summary.items %}
   <tr>
